OSMS-28: Fixed layout issues with default value and fonts

--- a/owa/app/css/sms.scss
+++ b/owa/app/css/sms.scss
@@ -117,3 +117,7 @@ input, select {
     margin-top: 15px;
 
 }
+
+.form-tooltip {
+    color: #737373
+}
